# dify-plugin-sdks

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  prek.toml  pyproject.toml  sitemap.xml
.github/workflows/: mkdocs.yml  pr.yml  pull-request.yaml  pypi_publish.yaml  test.yml
examples/agent/prompt/: template.py
examples/agent/strategies/: ReAct.py  function_calling.py
examples/dropbox_trigger/provider/: dropbox.py
examples/firecrawl_datasource/datasources/: crawl.py  crawl.yaml  firecrawl_app.py
examples/firecrawl_datasource/provider/: firecrawl_datasource.py
examples/github/: requirements.txt
examples/github/provider/: github.py
examples/github/tools/: github_repositories.py  github_repository_commits.py  github_repository_contents.py  github_repository_contributors.py  github_repository_info.py  github_repository_issues.py  github_repository_pulls.py  github_repository_readme.py  github_repository_releases.py  github_search_code.py  github_user_info.py  github_user_repos.py
examples/github_trigger/: requirements.txt
examples/github_trigger/provider/: github.py
examples/gmail_trigger/: README.md
examples/gmail_trigger/provider/: gmail_trigger.py
examples/google/: .env
examples/google_calendar_trigger/: README.md  requirements.txt
examples/google_calendar_trigger/events/: google_calendar_event_created.py  google_calendar_event_deleted.py  google_calendar_event_updated.py  utils.py
examples/google_calendar_trigger/provider/: google_calendar_trigger.py
examples/google_cloud_storage/: requirements.txt
examples/google_cloud_storage/datasources/: google_cloud_storage.py
examples/google_cloud_storage/provider/: google_cloud_storage.py  google_cloud_storage.yaml
examples/google_drive_trigger/provider/: google_drive.py
examples/jina/provider/: jina.py
examples/lark_trigger/events/: _shared.py
examples/lark_trigger/provider/: lark.py
examples/neko/: .difyignore  manifest.yaml
examples/neko/endpoints/: duck.py  girls.html  girls.py  girls.yaml  girls_talk.yaml  tts.yaml
examples/notion_datasource/: GUIDE.md
examples/notion_datasource/datasources/: notion_datasource.py
examples/notion_datasource/provider/: notion_datasource.py
examples/openai/provider/: openai.py
examples/openai_compat/provider/: openai_api_compatible.py
examples/slack_trigger/events/: _catalog_event.py  catalog_data.py
examples/slack_trigger/provider/: slack.py  slack.yaml
examples/telegram_trigger/events/: base.py
examples/telegram_trigger/provider/: telegram.py
python/: pyproject.toml
python/dify_plugin/: plugin.py
python/dify_plugin/config/: config.py
python/dify_plugin/core/: runtime.py
python/dify_plugin/file/: file.py
python/dify_plugin/integration/: entities.py
python/examples/notion_datasource/: GUIDE.md
python/tests/: test_llm_result.py
python/tests/invocations/: test_app.py
schema/: index.html
scripts/: setup-dify-plugin-cli.sh
search/: search_index.json
src/dify_plugin/: __init__.py  cli.py  plugin.py
src/dify_plugin/config/: config.py  integration_config.py  logger_format.py
src/dify_plugin/core/: model_factory.py  plugin_executor.py  plugin_registration.py  runtime.py  trigger_factory.py
src/dify_plugin/entities/: __init__.py  agent.py  datasource.py  datasource_manifest.py  endpoint.py  invoke_message.py  oauth.py  provider_config.py  tool.py  trigger.py  workflow_node.py
src/dify_plugin/errors/: __init__.py  trigger.py
src/dify_plugin/file/: entities.py  file.py
src/dify_plugin/integration/: run.py
src/dify_plugin/invocations/: file.py  tool.py
src/dify_plugin/protocol/: dynamic_select.py  oauth.py
tests/: test_llm_result.py  test_model_registry_get_model.py  test_prompt_message.py  test_trigger_factory.py
tests/__mock_server/: __init__.py  __main__.py  openai.py
tests/consts/: __init__.py
tests/entities/models/: test_llm.py
tests/entities/plugin/: test_declaration.py
tests/integration/: conftest.py  test_invoke_llm.py
tests/interfaces/agent/: test_agent.py
tests/interfaces/datasource/: test_construct_datasource.py
tests/interfaces/model/: test_ai_model_timing_context.py  test_construct_model_provider.py  test_llm_timing_context.py  test_model_registry_get_model.py  test_rerank.py  test_text_embedding.py  test_wrap_think.py  utils.py
tests/invocations/: test_app.py
tests/servers/: test_session.py  test_stdio.py
tests/utils/: test_http_parser.py
(+236 files in other folders)
